2005-01-28  Damon Chaplin  <damon@gnome.org>

	* gtk-doc.make: use dist-hook rather than EXTRA_DIST to copy the
	$(DOC_MODULE).types file over, so we can skip this if it doesn't exist.
	#156300.

2005-01-12  Damon Chaplin  <damon@gnome.org>

	* README: patch from Stefan Kost to mention GObject classes
	and describe the transformation process to XML/SGML and HTML,
	and to mention Devhelp.

2005-01-09  Damon Chaplin  <damon@gnome.org>

	* Released 1.3.

2005-01-09  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in (MergeSourceDocumentation): output better warnings
	using the type information. Patch from Stefan Kost. #161979

	* gtkdoc-scan.in (ScanHeader): support "typedef struct a *b;". Fixes
	last part of #156318.

	* gtkdoc-common.pl.in (ParseStructDeclaration): return an empty array
	for forward struct declarations. Part of #156318.

	* gtkdoc-mktmpl.in: 
	* gtkdoc-mkdb.in: updated a few of the warnings to make them a bit
	easier to understand.

2004-11-22  James Henstridge  <james@jamesh.id.au>

	* acconfig.h: remove file, since we don't have a config.h

	* configure.in: make sure $ACLOCAL_FLAGS is passed to aclocal on a
	rebuild.

	* autogen.sh: use Automake-1.9 if available, and call aclocal,
	autoconf, automake, etc in the same order as autoreconf does.

	* gtkdocize.in: if the AC_CONFIG_MACRO_DIR option is used in the
	configure script, copy gtk-doc.m4 to that directory in the source
	tree.

2004-11-16  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in (OutputFunction): output "const" rather than
	"G_CONST_RETURN". #157674.

	* gtkdoc-mktmpl.in (OutputDeclaration): skip "void" return types but
	not if it has modifiers e.g. "void *". #156963.

	* gtkdoc-scan.in (ScanHeader): handle __attribute__. Patch from
	Simon Josefsson. #156962.

2004-10-31  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in (OutputStruct): handle opaque/forward struct
	declarations. #156318 again. Tiny fix to avoid warnings.

2004-10-28  Damon Chaplin  <damon@gnome.org>
